# Trust_Rust

./: .env  .env.docker  .env.local  .gitignore  Dockerfile  README.md  cargo.toml  commands.txt  docker-compose.yml
HH Blockchain node/: hardhat.config.js  package-lock.json  package.json
HH Blockchain node/contracts/: AuctionFactory.sol  AuctionRegistry.sol
HH Blockchain node/scripts/: create_auction.js  deploy_factory.js
HH Blockchain node/test/: auctionFactory.test..js  auctionProtocol.test.js
trust_rust_client/: Cargo.toml
trust_rust_client/src/: auction_loader.rs  bidding.rs  config.rs  create_auction.rs  escrow.rs  lib.rs  main.rs  registry.rs  withdraw.rs
trust_rust_client/tests/: bid_test.rs  claim_after_timeout_test.rs  create_auction_test.rs  flag_refund_test.rs  registry_test.rs  test_escrow_interactive.rs
trust_rust_client/tests/common/: mod.rs
trust_rust_web/: Cargo.toml
trust_rust_web/src/: auth.rs  main.rs  state.rs
trust_rust_web/src/routes/: auction.rs  auction_bid.rs  auction_create.rs  auction_list.rs  auction_query.rs  auction_withdraw.rs  bidding.rs  create_auction.rs  escrow.rs  escrow_routes.rs  mod.rs  session.rs  withdraw.rs
trust_rust_web/static/: index.html
trust_rust_web/static/css/: styles.css
trust_rust_web/static/js/: app.js  app_init.js  auction_api.js  auction_cards.js  auction_state.js  auctions.js  auth.js  auth_session.js  bid_form.js  bidding.js  create_auction.js  create_auction_form.js  escrow.js  escrow_actions.js  main.js  utils.js  withdraw.js  withdraw_modal.js
(+7 files in other folders)
