[package]
name = "trust_rust_client"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "2.0.4", features = ["full"] }
dotenvy = "0.15.7"
eyre = "0.6.12"
serde = { version = "1.0", features = ["derive"] }   # ← Add this line
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }

