[package]
name = "trust_rust_web"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
tower-livereload = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

alloy-primitives = { version = "1", features = ["k256"] }
tower-cookies = "0.11"
trust_rust_client = { path = "../trust_rust_client" }
eyre = "0.6"
reqwest = { version = "0.12", features = ["json"] }
alloy = { version = "2.0.4", features = ["full"] }  # matches client
url = "2.5"